init semantic-ui-react, play with basic icons

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.84.0",
     "sequelize": "^4.39.0",
     "socket.io": "^2.1.1"
   },
