--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "connect-session-sequelize": "^5.2.2",
+    "date-fns": "^1.30.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "history": "^4.7.2",
