--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "history": "^4.7.2",
     "material-design-icons": "^3.0.1",
     "morgan": "^1.9.1",
+    "paper": "^0.12.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.5.0",
