mixcloud OAuth strategy and secrets

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "paper": "^0.12.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-mixcloud": "0.0.2",
     "pg": "^7.5.0",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.6.2",
